Adding picture and paragraph in about

--- a/Personal_Blog/Home/templates/Home/about.html
+++ b/Personal_Blog/Home/templates/Home/about.html
@@ -4,13 +4,21 @@
 {% block css_content %}
 
 {% load static %}
-<link rel="stylesheet" href={% static "Home/title_red.css" %}>
+<link rel="stylesheet" href={% static "Home/css/profile.css" %}>
 
 {% endblock %}
 
 
 {% block body_content %}
 
-<h1>About me</h1>
+<h1 class="center">About me</h1>
+
+<div id="profile-picture" class="profile-picture center">
+    <img src={% static "Home/img/me.jpg" %}>
+</div>
+
+<div id="paragraph" class="center">
+    <p>This is a simple paragraph about me.</p>
+</div>
 
 {% endblock %}
