--- a/Personal_Blog/Home/templates/Home/base.html
+++ b/Personal_Blog/Home/templates/Home/base.html
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
 
     {% load static %}
-    <link rel="stylesheet" href={% static "Home/base.css" %}>
+    <link rel="stylesheet" href={% static "Home/css/base.css" %}>
     {% block css_content %}
     {% endblock %}
 </head>
