--- a/Personal_Blog/Home/templates/Home/index.html
+++ b/Personal_Blog/Home/templates/Home/index.html
@@ -6,21 +6,22 @@
 
 <h2>Posts:</h2>
 
-
 {% for post in posts %}
 
+<a href="{% url 'onePost' post.id %}">
 <div class="post">
     <div class="post_title">
-        {{ post.title }}
+        <h3>{{ post.title }}</h3>
     </div>
     <div class="post_date">
         {{ post.date }}
     </div>
-    <div class="post_paragraph">
-        {{ post.paragraph }}
-    </div>
 </div>
 
 {% endfor %}
+
+<div>
+    <a href="{% url 'about' %}">About me</a>
+</div>
 
 {% endblock %}
