--- a/Personal_Blog/Post/templates/Post/one_post.html
+++ b/Personal_Blog/Post/templates/Post/one_post.html
@@ -10,7 +10,7 @@
 
 {% block body_content %}
 
-<a href="{% url 'index' %}">Home</a>
+<a href="{% url 'Home:index' %}">Home</a>
 
 <div id="post" class="center">
     {% if post.image %}
