--- a/Personal_Blog/Home/templates/Home/base.html
+++ b/Personal_Blog/Home/templates/Home/base.html
@@ -11,7 +11,7 @@
     {% endblock %}
 </head>
 <body>
-    {% block body_header %}
+    {% block authentication %}
     <div>
         {% if user.is_authenticated %}
         <a href="{% url 'Home:logout' %}">Logout</a>
@@ -19,6 +19,9 @@
         <a href="{% url 'Home:login' %}">Login</a>
         {% endif %}
     </div>
+    {% endblock %}
+
+    {% block body_header %}
     {% endblock %}
     {% block body_content %}
     {% endblock %}
