--- a/Personal_Blog/Home/templates/Home/login.html
+++ b/Personal_Blog/Home/templates/Home/login.html
@@ -14,8 +14,8 @@
     <form method="post">
         {% csrf_token %}
         <!-- {{ form.as_ul }} -->
-        <label>Username</label>
-        <input type="text" name="username" required>
+        <label>Email</label>
+        <input type="email" name="email" required>
         <label>Password</label>
         <input type="password" name="password" required>
         <input type="submit" value="Login">
