--- a/Personal_Blog/Home/templates/Home/base.html
+++ b/Personal_Blog/Home/templates/Home/base.html
@@ -6,7 +6,9 @@
     <title>{{ title }}</title>
 
     {% load static %}
-    <link rel="stylesheet" href={% static "Home/css/base.css" %}>
+    <link rel="stylesheet" href="{% static 'Home/css/normalize.css' %}"/>
+    <link rel="stylesheet" href="{% static 'Home/css/base.css' %}"/>
+    <link rel="stylesheet" href="{% static 'Home/css/header.css' %}"/>
     {% block css_content %}
     {% endblock %}
 </head>
@@ -15,14 +17,34 @@
     <div>
         {% if user.is_authenticated %}
         <a href="{% url 'Home:logout' %}">Logout</a>
-        {% else %}
-        <a href="{% url 'Home:login' %}">Login</a>
         {% endif %}
     </div>
     {% endblock %}
 
     {% block body_header %}
+    <header>
+        <nav>
+            <ul id="nav">
+                <li id="nav-index">
+                    <a href="{% url 'Home:index' %}">EDER'S</a>
+                </li>
+                <li id="nav-posts">
+                    <a href="{% url 'Home:index' %}">POSTS</a>
+                </li>
+                <li id="nav-events">
+                    <a href="{% url 'Home:index' %}">EVENTS</a>
+                </li>
+                <li id="nav-about">
+                    <a href="{% url 'Home:about' %}">ABOUT</a>
+                </li>
+                <li id="nav-contact">
+                    <a href="{% url 'Home:index' %}">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     {% endblock %}
+
     {% block body_content %}
     {% endblock %}
 </body>
