--- a/Personal_Blog/Post/templates/Post/create_post.html
+++ b/Personal_Blog/Post/templates/Post/create_post.html
@@ -1,4 +1,4 @@
-{% extends "Home/not_home.html" %}
+{% extends "Home/base.html" %}
 
 {% load static %}
 
@@ -9,8 +9,6 @@
 {% endblock %}
 
 {% block body_content %}
-
-<a href="{% url 'Home:index' %}">Home</a>
 
 <div id="create_post" class="center">
     <form method="post" enctype="multipart/form-data">
