--- a/Personal_Blog/Home/templates/Home/index.html
+++ b/Personal_Blog/Home/templates/Home/index.html
@@ -20,8 +20,12 @@
 
 {% endfor %}
 
-<div>
-    <a href="{% url 'Home:about' %}">About me</a>
+<div id="subscribe-form">
+    <form method="POST">
+        {% csrf_token %}
+        {{ subscriber_form }}
+        <input type="submit" value="Subscribe!"/>
+    </form>
 </div>
 
 {% endblock %}
