--- a/Personal_Blog/Home/static/Home/css/base.css
+++ b/Personal_Blog/Home/static/Home/css/base.css
@@ -1,3 +1,24 @@
 html {
     background-color: white;
+    font-size: 18px;
+}
+
+#body-content {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+.input {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    padding: .3em;
+    width: 250px;
+}
+
+.input-error {
+    background-color: rgba(237, 86, 79, 1);
+    border-radius: 3px;
+    color: rgba(249, 249, 249, 1);
+    padding: .7em .5em;
+    width: 245px;
 }
